Fix camera overflow and optimize selecting tiles when camera moving

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@
   margin: 0 auto;
   text-align: center;
   position: relative;
+  overflow: hidden;
   /* min-width: 100vw;
   min-height: 100vh; */
 }
